# algoritmsFromNsu

./: CMakeLists.txt  README.md  temp.c
About types/: Bloom filter.c
About types/DSU/: DSU.c
About types/DSU/tasks/: 1.c
About types/HashMap/: HashMap.c  struct.c  struct.h
About types/HashMap/task/: task1.c  task2.c
About types/Lists/: Teorhy.c  Theory2.c
About types/Stak/: Queue.c  QueueOnStack.c  StackOnList.c
About types/Stak/TaskAbout/: CorrectSkobochka.c  FibonachiOnStack.c  QueueWithPriority.c
About types/Structs/: Teorhy.c
About types/Trees/: RBTree.c
About types/Trees/Tasks/: BST_YesOrNo.c
About types/Trees/Дерево сумм/: Theory.c
About types/Trees/обзоды/: DownRecurtion.c  Width.c  down.c
About types/enums/: Teorhy.c
About types/uniouns/: Teorhy.c
About types/Куча/: heap.c
About types/граф/: main.c
About types/граф/Алгоритм Форда-Беллмана/через матрицк/: deskedition.c  main.c
About types/граф/Остовной граф(дерево)/: main.c
About types/граф/алгоритм Флойда–Уоршелла/: main.c
About types/граф/дейкстра/src/: main.c
About types/граф/дейкстра/src/lib/: csr.c  csr.h
About types/граф/задачка/: main.c
About types/граф/поиск merge base/: SMB.c
About types/граф/пропускная спосбоность/: main.c
About types/граф/слеш тп ртп/: mainfurer.c
About types/граф/топологическая сортировка/: main.c
Contest/2502/: D.c
Contest/ClassContest7/: ReadMe.md  main.c
Contest/SIXsevenContest/Арбитраж/: main.c
Contest/SIXsevenContest/Арбитраж/18+/: main.c
Contest/SIXsevenContest/Взаимозависимости/: main.c
Contest/SIXsevenContest/Избыточные кабели/: main.c
Contest/SIXsevenContest/Конденсация графа/: main.c
Contest/SIXsevenContest/Место встречи/: main.c
Contest/SIXsevenContest/Улучшение сети/: main.c
Contest/Third/: taskC.c  taskE.c  taskG.c  taskG_pars.c
Contest/fifthcoma/gentree/: main2PreAlphaDemoBuild.c  mainVer1prealphademobuid.c
Contest/first/: Candyslimit.c  candysmap.c  candyssumm.c  i love you ,Masha .c  magicaqrt.c
Contest/second/: task1.c  task2.c  task4.c  task5.c  task5test.c  task6.c
Contest/пятый/CSR/: main.c
Contest/пятый/Dependency graph/: main.c
Contest/пятый/islands/: main.c
Contest/пятый/virus/: main.c
Contest/пятый/Квадрат графа/: main.c
Contest/пятый/Критический путь проекта/: main.c
Contest/тетыре/Adaptive delta-coding/: ADC.c
Contest/тетыре/Damerau-Levenshtein distance/: DLS.c
Contest/тетыре/Knackpack/: knackpack.c
Contest/тетыре/LZ77/: lz77.c  main.py
Contest/тетыре/cacheTask/: cacheTask.c
_temp/: main.c
functions/Dynamic programming/: lagushka.c  tips.c
functions/Dynamic programming/fiboncahi/: main.c
functions/Dynamic programming/расстояние Левенштейна/: main.c
functions/Haffman code v1/: CMakeLists.txt
functions/Haffman code v1/src/: in.txt  main.c
functions/Haffman code v1/src/_temp/: in.txt
functions/Haffman code v1/src/lib/: config.h  debag.c  debag.h  decoder.c  decoder.h  encoder.c  encoder.h  haffman.c  haffman.h
functions/Sorts/: BubbleSort.c  InsertSort.c
lib/Algoritm Bellman Ford/: bellmanFord.c  bellmanFord.h
lib/CSR/: csr.c  csr.h
